0.7.3
Fixed opening duplicate files with relative path.
Tabbing at begining of line then pressing 'up/down' returns cursor to START/BEGINNING of previous/next line.
Started '"what's this' info for prefs dialog.
Set native 'print to pdf' default output folder to ~/Documents/.
Added option to set external application to handle printg ( QT5 doesn't play well with CUPS ).
Fixed crash when trying to print with no docs.
Fixed duplicate files being added to recents menu.
Fixed toggling tool output window.
Fixed running tools as root.

0.7.2
KKEditQTProgressBar cleanup.
Speeded up finding definitions from documentation.
Various ui tweaks.
Added save history file menu to SaveHistory plugin.
Smartened up plugin prefs dialog.
Added 'very safe' mode, no plugins, themes, syntax highlighters loaded, no exit data written.
Added 'safe' mode, all plugins disabled, no enable/disable data written.
Added menu style to prefs ( I prefer a scrollable menu ).
Cleaned up Prefs layout.
Combined max chars in bookmarks/function defs to max chars in menus ( also affects recents ).
Fixed move selection up/down via shortcut.
Fixed move line up/down via shortcut.
Fixed enabling cut copy etc when using 'Select All'.
Fixed segfault when running tool with <2 open docs.
Added delete icon to toolbar options.
Added check for messages time interval ( ms ) to prefs ( default 1000ms ).
Added 'Delete' to edit/context menu.
CTRL+D now deletes word under cursor if no selection or deletes selected text.
Added 'Select All' to edit/context menu.
Fixed d&d within document.
Added local themes ( ~/.KKEditQT/themes ).
Fixed changing theme in prefs.
Set visual insertion point for drag and drop on doc.
Code clean.
Fixed setting doc dirty on drop file.
Fixed reseting functions menu on file save.
Dropping file on doc now inserts at drop point.
Set max length of info line in KKEditQTProgressBar.
Added simple help to Symbols menu plugin ( Edit->Plugin Prefs->Symbols menu About->Help ).
Fixed multi char graphemes.